--- a/data/countries/de/nw/oberberg/data.yaml
+++ b/data/countries/de/nw/oberberg/data.yaml
@@ -50,4 +50,4 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruene-wipperfuerth.de
+    url: https://gruene-wipperfuerth.de/
