--- a/data/countries/de/bw/karlsruhe-land/data.yaml
+++ b/data/countries/de/bw/karlsruhe-land/data.yaml
@@ -20,7 +20,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-badschoenborn.de/
+    url: https://www.gruene-badschoenborn.de/
 ---
 city: Bretten
 country: DE
