Extend schema validation for YOUTH_ORGANIZATION, add Grüne Jugend data (#110)
* Extend validation for type YOUTH_ORGANIZATION
* Add DE:BUNDESVERBAND Grüne Gugend
* Add Grüne Jugend Landesverband Baden-Württemberg
* Add README info on YOUTH_ORGANIZATION
* Add more DE:LANDESVERBAND entries for Grüne Jugend
* Add Grüne Jugend entries of type DE:KREISVERBAND to Thüringen
* Fix URLs
* Improve validation
* Remove inaccessible code
* Add more schema check
* Remove incomplete urls entry

--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -21,6 +21,22 @@ urls:
 emails:
   - address: info@gruene-brandenburg.de
 ---
+type: YOUTH_ORGANIZATION
+level: DE:LANDESVERBAND
+country: DE
+state: Brandenburg
+urls:
+  - type: WEBSITE
+    url: https://gj-bb.de/
+  - type: FACEBOOK
+    url: https://www.facebook.com/GJBBG/
+  - type: TWITTER
+    url: https://twitter.com/gj__bw/
+  - type: INSTAGRAM
+    url: https://www.instagram.com/gruene_jugend_brandenburg/
+emails:
+  - address: buero@gj-bb.de
+---
 type: REGIONAL_CHAPTER
 level: DE:KREISVERBAND
 country: DE
